Applied a similar fix for the scrollbars in accordion and tabsheet as was done for the splitpanel previously #9572

--- a/WebContent/VAADIN/themes/base/accordion/accordion.scss
+++ b/WebContent/VAADIN/themes/base/accordion/accordion.scss
@@ -27,4 +27,14 @@
 	width: 100%;
 }
 
+/*
+ * In IE8 and IE9 we need to do magic things to avoid scrollbars since it does not completely
+ * support the HTML5 doctype. Changing the contained element to a block element will not add
+ * magical bottom paddings to the contained element and cause scrollbars. Doing this for 
+ * all browsers for consistency.
+ */
+.v-accordion .v-accordion-item-content > .v-widget {
+    display: block;
+}
+
 }
